[tool.poetry]
name = "valutatrade-hub"
version = "0.1.0"
description = "Cryptocurrency and fiat currency trading platform"
authors = ["Mwrld-glitch <loba4evskogo@mail.com>"]
readme = "README.md"
packages = [{include = "valutatrade_hub"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
prompt-toolkit = "^3.0.43"
prettytable = "^3.9.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[tool.poetry.scripts]
project = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
